Revert "fix ios mobile layout issues"
This reverts commit 609661ea61e3769b9dc3636665e4e03f86a470a7.

--- a/src/index.css
+++ b/src/index.css
@@ -8,18 +8,6 @@
   }
 }
 
-.mobile-topbar {
-  padding-top: max(0.5rem, env(safe-area-inset-top));
-}
-
-.mobile-nav-offset {
-  top: calc(env(safe-area-inset-top, 0px) + 4.75rem);
-}
-
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
 .noise-overlay {
   position: fixed;
   top: 0;
